2010-01-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Further revision to maintain the old
	behaviour of the string variables demo.  The demo uses a very unusual
	method to read time strings from the input file, but let's not break
	it unless necessary.

2010-01-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Time format "%s" should be able to
	handle any numeric input. Convert input of the form   'using ($1)' or
	'using (f($1))' to a string so that it can be passed to gstrptime().
	Bug #2899511

2010-01-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps term/PostScript/prologues.h:
	Update version in PostScript headers.
	Define a user-configurable flag SuppressPDFMark.

	* term/post.trm: Re-arrange stuff in the prolog so that users can either
	set SuppressPDFMark to true in an individual file or make a permanent
	change by setting it in the shared prolog file.

2009-12-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/gadgets.c src/gadgets.h src/graph3d.c src/graphics.c
	src/misc.c src/plot2d.c src/plot3d.c src/set.c src/show.c src/tables.c
	src/tables.h src/term_api.h src/term.c src/unset.c src/util3d.c
	demo/tango_colors.gp docs/gnuplot.doc:

	Allow the user to redefine the properties of basic linetypes.
	The redefinitions are persistent; i.e. they are not affected by "reset".
	The command options are identical to those for "set style line".
	New command:
		set linetype N {various line properties}
		set linetype cycle M
	
	The new line colors and widths can be set to cycle after going through
	M linetypes.  E.g. for M=8, the color of linetypes 9, 17, 25 ... are the
	same as that of linetype 1.

2009-12-30  Peter Kalinin  <pkalinin@users.sourceforge.net>

	* term/metapost.trm (MP_options):
	The metapost terminal sets the line thickness for plots via drawoptions,
	then uses 'draw GPtext ...' to place the text. The draw inherits options