@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: datafile.c,v 1.182 2010/01/04 07:38:28 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: datafile.c,v 1.183 2010/01/06 17:29:03 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - datafile.c */
@@ -698,7 +698,7 @@ df_tokenise(char *s)
 		df_column[df_no_cols].good = DF_STRINGDATA;
 	} else if (check_missing(s)) {
 	    df_column[df_no_cols].good = DF_MISSING;
-	    df_column[df_no_cols].datum = atof("NaN");
+	    df_column[df_no_cols].datum = not_a_number();
 	} else {
 	    int used;
 	    int count;
